corrected font size of Title in Item page

--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -10,7 +10,7 @@
                         <div ng-include="'templates/layouts/video-player.html'"></div>
                     </div>
                     <div class="people-info text-center col-md-12">
-                        <h5 class="ellipsis margin-top-fifteen">{{WidgetMedia.item.data.title}}</h5>
+                        <h5 class="ellipsis margin-top-fifteen" style="font-size: 16px;">{{WidgetMedia.item.data.title}}</h5>
                         <h5 class="margin-bottom-zero">{{WidgetMedia.item.data.summary}}</h5>
                     </div>
                 </div>
