--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix ">
-            <h4 class="margin-top-zero">{{WidgetMedia.item.data.title}}</h4>
+            <h4 class="margin-top-zero" style="font-size: 16px;">{{WidgetMedia.item.data.title}}</h4>
             <h5 class="margin-bottom-zero">{{WidgetMedia.item.data.summary}}</h5>
         </div>
         <div class="padded padding-top-zero">
