renamed images to .images, added readm.md and nomedia file

--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -20,7 +20,7 @@
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
                             <div play-btn="{{item.data.videoUrl.length > 0}}" class="list-media-holder text-overlay">
                                 <img ng-if="item.data.topImage" ng-src="{{item.data.topImage | cropImage:240:135}}">
-                                <img ng-if="!item.data.topImage" src="assets/images/placeholder16x9.png">
+                                <img ng-if="!item.data.topImage" src="assets/.images/placeholder16x9.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
