--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -20,7 +20,7 @@
                                 <img ng-if="WidgetHome.items[$index].data.topImage"
                                      ng-src="{{WidgetHome.items[$index].data.topImage | cropImage:200:200}}">
                                 <img ng-if="!WidgetHome.items[$index].data.topImage"
-                                     src="assets/images/placeholder200x200.png">
+                                     src="assets/.images/placeholder200x200.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
@@ -39,7 +39,7 @@
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage"
                                      ng-src="{{WidgetHome.items[$index + 1].data.topImage | cropImage:200:200}}">
                                 <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
-                                     src="assets/images/placeholder200x200.png">
+                                     src="assets/.images/placeholder200x200.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
