--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -25,7 +25,7 @@
                 <img ng-if="NowPlaying.currentTrack.image" class="border-radius-two"
                      ng-src="{{NowPlaying.currentTrack.image | cropImage: 260 :260 }}" height="260px" width="260">
                 <img ng-if="!NowPlaying.currentTrack.image" class="border-radius-two"
-                     src="assets/images/now-playing.png" height="260px" width="260">
+                     src="assets/.images/now-playing.png" height="260px" width="260">
             </div>
         </div>
         <div class="media-player-info margin-top-fifteen">
