[GAT-BFI008-38] [App :Church Sp template 01 ]-audio player does not load when tap on 'Listen' of 1st media file of any album : Fixed

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,6 +1,6 @@
 <div class="holder now-playing text-center audio-player">
     <!--// need to refactor this.-->
-    <div ng-style="{'background':'url(' + (NowPlaying.currentTrack.image? NowPlaying.currentTrack.image : 'http://s3-us-west-2.amazonaws.com/pluginserver.prod/plugins/d575ea0d-ba73-4edd-9c3d-37e49e44ac4f/widget/assets/images/now-playing.png') + ') no-repeat center center' ,
+    <div ng-style="{'background':'url(' + (NowPlaying.currentTrack.image? (NowPlaying.currentTrack.image | cropImage : deviceWidth : deviceHeight) : 'assets/.images/now-playing.png') + ') no-repeat center center' ,
           '-o-filter': 'blur(10px) brightness(0.2)',
     '-moz-filter': 'blur(10px) brightness(0.2)',
     '-webkit-filter': 'blur(10px) brightness(0.2)',
