export csv condition added for safari and a NOTE has been shown

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -32,6 +32,14 @@
         <a class="btn btn-primary margin-left-ten" ng-click="ContentHome.getTemplate()">Get Template</a>
     </div>
 </div>
+<div class="item clearfix row">
+    <div class="labels col-md-3 padding-right-zero pull-left">
+
+    </div>
+    <div class="main col-md-9 pull-right padding-right-zero">
+        <span style="font-size: smaller">NOTE: Safari users need to rename the file to .csv to open the file.</span>
+    </div>
+</div>
 <hr class="none">
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
