--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -18,7 +18,7 @@
          }"></div>
     <div class="media-center-plugin">
         <div class="media-header-link">
-            <a ng-click="NowPlaying.getFromPlaylist()" class="whiteTheme">Go to your playlist</a>
+            <a ng-click="NowPlaying.getFromPlaylist()" class="whiteTheme">Open Playlist</a>
         </div>
         <div class="media-holder margin-top-fifteen">
             <div class="media-inner text-center">
