--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -311,9 +311,9 @@
     line-height: 24px;
 }
 
-.playerMP div:nth-child(2) {
+/*.playerMP div:nth-child(2) {
     width: 70%;
-}
+}*/
 
 .audio-plyer input[type=range] {
     -webkit-appearance: none;
@@ -327,20 +327,21 @@
 
 .audio-plyer input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 10px;
+    height: 5px;
     cursor: pointer;
     animate: 0.2s;
     background: #ffffff;
 }
 
 .audio-plyer input[type=range]::-webkit-slider-thumb {
-    height: 20px;
-    width: 20px;
+    height: 16px;
+    width: 16px;
+    border: 1px solid #09a3ee;
     background: #ffffff;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -5px;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 .audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
