--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -33,15 +33,15 @@
 
             <p class="margin-zero ellipsis whiteTheme">{{NowPlaying.currentTrack.artist}}</p>
         </div>
-        <div class="slider margin-top-ten" style="margin-bottom: -80px;">
-            <div class="playerMP">
-                <div ng-if="NowPlaying.currentTime">{{NowPlaying.currentTime | secondsToDateTime | date:'mm:ss'}}</div>
+        <div class="slider margin-top-ten" style="margin-bottom: -30px;">
+            <div>
                 <div class="audio-plyer"><input type="range" min="0" max="{{NowPlaying.duration}}"
                             ng-model="NowPlaying.currentTime"
                             ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"
                             ng-style="NowPlaying.duration? {'visibility':'visible'}:{'visibility':'hidden'}"
-                            class="whiteBackgroundTheme" style="height:2px; border-radius:4px;"/></div>
-                <div ng-if="NowPlaying.duration">{{NowPlaying.duration | secondsToDateTime | date:'mm:ss'}}</div>
+                            class="whiteBackgroundTheme" style="height:30px; border-radius:4px;background-color: transparent !important;"/></div>
+                <div ng-if="NowPlaying.currentTime" style="float: left">{{NowPlaying.currentTime | secondsToDateTime | date:'mm:ss'}}</div>
+                <div ng-if="NowPlaying.duration" style="float: right">{{NowPlaying.duration | secondsToDateTime | date:'mm:ss'}}</div>
             </div>
         </div>
         <div class="text-center margin-top-fifteen">
