improved the progress bar ui and font size of track title

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -759,3 +759,7 @@ html[browser="Firefox"] .layout3 .list-layout .list-item-media .list-media-holde
     font-size:24px;
     color:#fff;
 }
+.time-indicator{
+    margin-top: -25px !important;
+    opacity: 0.6 !important;
+}
