MEDIA CENTERS AND AUDIO PLAYER: Playlist UI is messed up : Fixed

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -88,7 +88,7 @@
                                 <img ng-if="track.image" ng-src="{{track.image | cropImage : 55 :22}}">
                             </div>
                             <div class="list-item-copy text-left padding-left-ten padding-right-ten">
-                                <p class="margin-bottom-zero ellipsis margin-top-twenty">{{track.title}}</p>
+                                <p class="margin-bottom-zero ellipsis margin-top-twenty text-primary">{{track.title}}</p>
                             </div>
                             <div class="btns text-center">
                                 <a ng-if="!track.playing" class="icon icon-play-circle"
