--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,7 +1,7 @@
 <div class="holder padding-zero">
     <div class="media-center-plugin layout3 text-overlay">
         <div class="plugin-banner clearfix text-overlay">
-            <div id="carousel" build-fire-carousel=""></div>
+            <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}" id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="padded text-left text-overlay" ng-if="WidgetHome.showDescription()">
             <p class="margin-bottom-zero"
