When going to '...' to playlist  we show Cancel instead off Done: Fixed

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -152,7 +152,7 @@
                             <a>Share</a>
                         </div>-->
                         <div class="text-center item">
-                            <a ng-click="NowPlaying.closeMoreInfoOverlay()" class="whiteTheme">Cancel</a>
+                            <a ng-click="NowPlaying.closeMoreInfoOverlay()" class="whiteTheme">Done</a>
                         </div>
                     </div>
                 </div>
