Replaced old placeholder images with new one

--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -93,8 +93,8 @@
                           ng-class="{ 'disabled': ContentHome.itemSortableOptions.disabled }"></span>
 
                     <div class="media-holder pull-left">
-                        <img ng-src="{{item.data.topImage | resizeImage : 50:50}}" ng-if="item.data.topImage">
-                        <img src="assets/images/1x1.png" ng-if="!item.data.topImage">
+                        <img load-image="1x1" data-final-src="{{item.data.topImage | resizeImage : 50:50}}" ng-if="item.data.topImage">
+                        <img src="../../../../styles/media/holder-1x1.png" ng-if="!item.data.topImage">
                     </div>
                     <div class="copy pull-right">
                         <a class="text-primary" href="#/media/{{item.id}}"><span
