--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -19,8 +19,8 @@
                          ng-class-even="list-item-even">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
                             <div play-btn="{{item.data.videoUrl.length > 0}}" class="list-media-holder text-overlay">
-                                <img ng-if="item.data.topImage" ng-src="{{item.data.topImage | cropImage:240:135}}">
-                                <img ng-if="!item.data.topImage" src="assets/.images/placeholder16x9.png">
+                                <img ng-if="item.data.topImage" load-image="16x9" data-final-src="{{item.data.topImage | cropImage:240:135}}">
+                                <img ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
