--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -17,10 +17,10 @@
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="list-media-holder text-overlay"
                                  play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0}}">
-                                <img ng-if="WidgetHome.items[$index].data.topImage"
-                                     ng-src="{{WidgetHome.items[$index].data.topImage | cropImage:200:200}}">
+                                <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1"
+                                     data-final-src="{{WidgetHome.items[$index].data.topImage | cropImage:200:200}}">
                                 <img ng-if="!WidgetHome.items[$index].data.topImage"
-                                     src="assets/.images/placeholder200x200.png">
+                                     src="../../../styles/media/holder-1x1.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
@@ -36,10 +36,10 @@
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="list-media-holder text-overlay"
                                  play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0}}">
-                                <img ng-if="WidgetHome.items[$index + 1].data.topImage"
-                                     ng-src="{{WidgetHome.items[$index + 1].data.topImage | cropImage:200:200}}">
+                                <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
+                                     data-final-src="{{WidgetHome.items[$index + 1].data.topImage | cropImage:200:200}}">
                                 <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
-                                     src="assets/.images/placeholder200x200.png">
+                                     src="../../../styles/media/holder-1x1.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
