Make a separate page for playlist as in Media Player Plugin : Fixed

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -73,7 +73,7 @@
         </a>
     </div>
     <!-- Playlist Overlay -->
-    <div ng-if="NowPlaying.openPlaylist" class="overlay"
+    <div ng-if="playlist" class="overlay"
          style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
         <div class="overlay-content"
              style="postiion:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
