--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,6 +1,6 @@
 <div class="holder now-playing text-center audio-player">
     <!--// need to refactor this.-->
-    <div ng-style="{'background':'url(' + (NowPlaying.currentTrack.image? (NowPlaying.currentTrack.image | cropImage : deviceWidth : deviceHeight) : 'assets/.images/now-playing.png') + ') no-repeat center center' ,
+    <div ng-style="{'background':'url(' + (NowPlaying.currentTrack.image? (NowPlaying.currentTrack.image | cropImage : deviceWidth : deviceHeight) : 'http://app.buildfire.com/app/media/now-playing.png') + ') no-repeat center center' ,
           '-o-filter': 'blur(10px) brightness(0.2)',
     '-moz-filter': 'blur(10px) brightness(0.2)',
     '-webkit-filter': 'blur(10px) brightness(0.2)',
@@ -25,7 +25,7 @@
                 <img ng-if="NowPlaying.currentTrack.image" class="border-radius-two" load-image="1x1"
                      data-final-src="{{NowPlaying.currentTrack.image | cropImage: 260 :260 }}" height="260px" width="260">
                 <img ng-if="!NowPlaying.currentTrack.image" class="border-radius-two"
-                     src="assets/.images/now-playing.png" height="260px" width="260">
+                     src="http://app.buildfire.com/app/media/now-playing.png" height="260px" width="260">
             </div>
         </div>
         <div class="media-player-info margin-top-fifteen">
@@ -117,7 +117,7 @@
                 <div class="media-holder margin-top-thirty">
                     <div class="media-inner text-center">
                         <img ng-if="!NowPlaying.currentTrack.image" class="border-radius-two"
-                             src="http://s3-us-west-2.amazonaws.com/pluginserver.prod/plugins/d575ea0d-ba73-4edd-9c3d-37e49e44ac4f/widget/assets/images/now-playing.png">
+                             src="http://app.buildfire.com/app/media/now-playing.png">
                         <img ng-if="NowPlaying.currentTrack.image" class="border-radius-two"
                              ng-src="{{NowPlaying.currentTrack.image | cropImage :140:140}}">
                     </div>
