laoder issue sfixed for youtube/viemo

--- a/widget/templates/layouts/video-player.html
+++ b/widget/templates/layouts/video-player.html
@@ -1,6 +1,6 @@
 
     <div ng-style="{height: WidgetMedia.deviceHeight /3}" ng-show="WidgetMedia.showVideo" class="videogular-container">
-      <img src="../../../styles/media/holder-16x9.gif"
+      <img src="../../../styles/media/holder-16x9.gif" data-ng-hide="WidgetMedia.item.data.videoUrl | isYoutubeVimeoLink"
            ng-if="WidgetMedia.loadingVideo">
         <videogular data-ng-hide="WidgetMedia.item.data.videoUrl | isYoutubeVimeoLink" vg-player-ready="WidgetMedia.onPlayerReady($API)"
                     vg-change-source="WidgetMedia.sourceChanged($source)"
