--- a/widget/templates/modals/remove-track-modal.html
+++ b/widget/templates/modals/remove-track-modal.html
@@ -1,13 +1,16 @@
-<div class="padded clearfix" style="background-color: rgba(0, 0, 0, 0.8) !important;">
-    <div class="content text-center">
-        <p class="whiteTheme">Are you sure you want to remove this track from playlist?</p>
+<div class="modal-contain">
+    <div class="padded clearfix">
+        <div class="content text-center">
+            <p class="text-center blackTheme" style="font-weight:500;">Confirm</p>
+            <p class="blackTheme margin-zero">Are you sure you want to remove this track from the playlist?</p>
+        </div>
     </div>
     <div class="bottom border-top-grey clearfix">
-        <div class="col-md-6 pull-left text-center">
-            <a class="text-primary default-background-hover transition-third whiteTheme" ng-click="RemoveTrackPopup.cancel()">Cancel</a>
+        <div class="col-xs-6 pull-left text-center padding-zero">
+            <a class="blackTheme default-background-hover transition-third" ng-click="RemoveTrackPopup.cancel()" style="display:block; padding:8px;">Cancel</a>
         </div>
-        <div class="col-md-6 pull-right text-center">
-            <a class="text-danger default-background-hover transition-third whiteTheme" ng-click="RemoveTrackPopup.ok()">Remove</a>
+        <div class="col-xs-6 pull-right text-center padding-zero border-left-grey">
+            <a class="text-danger default-background-hover transition-third" ng-click="RemoveTrackPopup.ok()" style="display:block; padding:8px; text-decoration:none;">Remove</a>
         </div>
     </div>
 </div>
