--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -35,13 +35,24 @@
         </div>
         <div class="slider margin-top-ten" style="margin-bottom: -30px;">
             <div>
-                <div class="audio-plyer"><input type="range" min="0" max="{{NowPlaying.duration}}"
+                <div class="audio-plyer"><input type="range" min="0" max="{{NowPlaying.duration || 163.94449}}"
                             ng-model="NowPlaying.currentTime"
                             ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"
-                            ng-style="NowPlaying.duration? {'visibility':'visible'}:{'visibility':'hidden'}"
                             class="whiteBackgroundTheme" style="height:30px; border-radius:4px;background-color: transparent !important;"/></div>
-                <div ng-if="NowPlaying.currentTime" class="time-indicator" style="float: left">{{NowPlaying.currentTime | secondsToDateTime | date:'mm:ss'}}</div>
-                <div ng-if="NowPlaying.duration" class="time-indicator" style="float: right">{{NowPlaying.duration | secondsToDateTime | date:'mm:ss'}}</div>
+                <div ng-if="NowPlaying.currentTime!=0" class="time-indicator" style="float:left">
+                    {{NowPlaying.currentTime | secondsToDateTime |date: 'mm:ss'}}
+                </div>
+                <div ng-if="NowPlaying.currentTime==0" class="time-indicator" style="float: left;">
+                    {{"--:--"}}
+                </div>
+                <div ng-if="NowPlaying.duration" class="time-indicator" style="float: right;">
+                    {{(NowPlaying.duration | secondsToDateTime | date: 'mm:ss')}}
+                </div>
+                <div ng-if="!NowPlaying.duration" class="time-indicator" style="float: right;">
+                    {{"--:--"}}
+                </div>
+                <!--<div ng-if="NowPlaying.currentTime" class="time-indicator" style="float: left">{{NowPlaying.currentTime | secondsToDateTime | date:'mm:ss'}}</div>
+                <div ng-if="NowPlaying.duration" class="time-indicator" style="float: right">{{NowPlaying.duration | secondsToDateTime | date:'mm:ss'}}</div>-->
             </div>
         </div>
         <div class="text-center margin-top-fifteen">
