Audio buffer became all blue when skipping the time : Fixed

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -344,7 +344,7 @@
 }
 
 .audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
+    /*background: #367ebd;*/
 }
 
 .audio-plyer input[type=range]::-moz-range-track {
