--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -16,7 +16,7 @@
     'width': '110%',
     'z-index': '0'
          }"></div>
-    <div class="media-center-plugin">
+    <div class="media-center-plugin"  ng-if="!(NowPlaying.openMoreInfo || NowPlaying.openSettings)">
         <div class="media-header-link">
             <a ng-click="NowPlaying.getFromPlaylist()" class="whiteTheme">Open Playlist</a>
         </div>
@@ -122,7 +122,7 @@
 
     <!-- More Info Overlay -->
     <div ng-if="NowPlaying.openMoreInfo" class="overlay"
-         style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
+         style="position:fixed; top:0; left:0; width:100%; height:100%;">
         <div class="overlay-content"
              style="postiion:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
             <div class="media-player-more-info">
@@ -169,7 +169,7 @@
 
     <!-- Settings Overlay -->
     <div ng-if="NowPlaying.openSettings" class="overlay"
-         style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
+         style="position:fixed; top:0; left:0; width:100%; height:100%;">
         <div class="overlay-content"
              style="postiion:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
             <div class="media-player-settings">
