--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -94,7 +94,7 @@
         <span>Media Date</span>
     </div>
     <div class="main col-md-9 pull-right">
-        <input dt="{{ContentMedia.item.data.mediaDate}}" type="date" class="form-control"
+        <input id="datePickerMCM" dt="{{ContentMedia.item.data.mediaDate}}" type="date" class="form-control"
                ng-model="ContentMedia.item.data.mediaDate"/>
     </div>
 </div>
@@ -109,3 +109,10 @@
         </div>
     </div>
 </div>
+        <script>
+            $(function(){
+                if ( $('#datePickerMCM')[0].type != 'date' ) $('#datePickerMCM').datepicker();
+                else console.log("DATEEEEEEEE");
+            })
+
+        </script>
