--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -111,8 +111,9 @@
 </div>
         <script>
             $(function(){
-                if ( $('#datePickerMCM')[0].type != 'date' ) $('#datePickerMCM').datepicker();
+                if ( $('#datePickerMCM')[0].type == 'date' ) $('#datePickerMCM').datepicker();
                 else console.log("DATEEEEEEEE");
+                $('#ui-datepicker-div').css('background-color','beige');
             })
 
         </script>
